--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,7 @@
                     <h5>Related repos</h5>
                     <div ng-repeat="relatedRepo in attrs.relatedRepos">
                         <p>
-                            <span>{{ relatedRepo.repo }}</span>
+                            <a href="http://github.com/{{ relatedRepo.repo }}"><span>{{ relatedRepo.repo }}</span></a>
                         </p>
                     </div>
                 </div>
