Back to previus version

--- a/static/index.html
+++ b/static/index.html
@@ -52,14 +52,14 @@
                 </div>
                 
                 <!-- Created -->                
-                <div class="subcontainer" ng-if="attrs.searchType=='user'">
+                <!-- <div class="subcontainer" ng-if="attrs.searchType=='user'">
                     <h5>Creations</h5>
                     <div ng-repeat="created in attrs.creations">
                         <p>
                             <a href="http://github.com/{{ creation }}"></a>
                         </p>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Contributions -->
                 <div class="subcontainer" ng-if="attrs.searchType=='user'">
