--- a/static/index.html
+++ b/static/index.html
@@ -51,12 +51,22 @@
                     </p>
                 </div>
                 
+                <!-- Creations -->
+                <div class="subcontainer" ng-if="attrs.searchType=='user'">
+                    <h5>Creations</h5>
+                    <div ng-repeat="creation in attrs.creations">
+                        <p>
+                            <a href="http://github.com/{{ creation }}">{{ creation }}</a>
+                        </p>
+                    </div>
+                </div>
+
                 <!-- Contributions -->
                 <div class="subcontainer" ng-if="attrs.searchType=='user'">
                     <h5>Contributions</h5>
                     <div ng-repeat="contribution in attrs.contributions">
                         <p>
-                            <a href="{{ contribution.html_url }}">{{ contribution.name }}</a>
+                            <a href="http://github.com/{{ contribution.repo }}">{{ contribution.repo }}</a>
                         </p>
                     </div>
                 </div>
